--- a/internal/pages/main/main.html
+++ b/internal/pages/main/main.html
@@ -2,5 +2,9 @@
 <html>
 {{template "head.html" . }} 
   <body>
+	{{template "about.html" . }}
+	{{template "contact.html" . }}
+	{{template "footer.html" . }}
+	{{template "autonav.html" . }}
   </body>
 </html>
